# ClickML

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
Backend/: .gitignore  Dockerfile  NoCodeMLPL.excalidraw  docker-compose.yml  package-lock.json  package.json
Backend/src/: index.js
Backend/src/controllers/: APIresolution.js  Connections.js  controlIngestion.js  deployments.js  etlController.js  featureSelection.js  fetchData.js  schedular.js  testdb.js  validatation.js
Backend/src/controllers/GenerateIngestionForm/: dbTodb.js
Backend/src/routes/: ETLRouter.js
Backend/src/templates/: IngestionETLApi.njk  apiTodb.njk  dbTodb.njk  fileTodb.njk  kafkaToS3.njk
Backend/test/: dummyjson.json  testawsbucket.js  testtemplategen.js
ETL & MLBackend/: EDA.ipynb  Tasks  main.py  requirements.txt
ETL & MLBackend/Machine_learning/Components/: Data_preprocess.py  pickletest.py
ETL & MLBackend/Machine_learning/Components/artifacts/: Params.pkl
ETL & MLBackend/etl_flows/: Dockerfile  dummy.txt  main.py
ETL-Backend/: Dockerfile  airflow_settings.yaml
ETL-Backend/.astro/: config.yaml  docker-compose.override.yml
ETL-Backend/dags/: generated_dag.py  syncDags.py
FastAPI-Backend/: main.py  requirements.txt
FastAPI-Backend/templates/: etl_dag_template.j2
Frontend/clickml/: README.md  package-lock.json  package.json  tsconfig.json
Frontend/clickml/public/images/: Loading.webm
Frontend/clickml/src/Fonts/: font.ts
Frontend/clickml/src/app/: globals.css  layout.tsx  page.tsx
ML-Backend/: .gitignore  Dockerfile  init.sql  main.py  requirements.txt
ML-Backend/Machine_learning/Components/: Data_preprocess.py  Model_trainer.py  data_transformation.py  main.py  utils.py
ML-Backend/etl_flows/: main.py  prefect.yaml
airflow-processor/: Dockerfile  docker-compose.yaml  entrypoint.sh
airflow-processor/dags/: syncDags.py
backend/: __init__.py  app.py  dependencies.py
backend/api/v1/: __init__.py
backend/core/: exceptions.py
clickml/: __init__.py  cli.py
clickml/config/: __init__.py  settings.py
clickml/core/: __init__.py  base.py  model.py  pipeline.py
clickml/pipelines/: __init__.py  etl.py  preprocessing.py  training.py
docs/: README.md
docs/developer-guide/: architecture.md
docs/user-guide/: getting-started.md
etl_flows/: main.py  prefect.yaml  requirements.txt
etl_flows/ETLSchedular/: eltSchedular.py  etl_flow.py
etl_flows/dags/: etl_flow.py
frontend/: README.md  package.json
scripts/: setup-dev.sh
tests/: conftest.py  test_api.py  test_core.py
(+46 files in other folders)
